--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,5 @@
 # These are supported funding model platforms
 open_collective: quico-node
+ko_fi: colocohen
+buy_me_a_coffee: colocohen
+thanks_dev: colocohen
