--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 github: colocohen
-open_collective: quico-node
+open_collective: quicojs
 buy_me_a_coffee: colocohen
 thanks_dev: colocohen
